Use main branch

--- a/.github/workflows/docutils-apidocs.yml
+++ b/.github/workflows/docutils-apidocs.yml
@@ -2,14 +2,14 @@ name: apidocs
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   docutils:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with: 
