--- a/.github/workflows/docutils-apidocs.yml
+++ b/.github/workflows/docutils-apidocs.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
 
         # Generate docutils apidocs
-        tox -e docutils
+        tox -e docutils || true
 
     - name: Push API documentation to Github Pages
       uses: peaceiris/actions-gh-pages@v3
