--- a/.github/workflows/docutils-apidocs.yml
+++ b/.github/workflows/docutils-apidocs.yml
@@ -32,3 +32,4 @@ jobs:
         publish_dir: ./build/docutils/
         commit_message: "Update docutils API documentations"
         destination_dir: docutils
+        enable_jekyll: true
