--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
     
     pydoctor \
         --project-name="docutils-0.17.1" \
-        --project-url="../" \
+        --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
         --project-base-dir={toxworkdir}/docutils \
         --html-output=./build/docutils \
