Add astroid API docs

--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,26 @@ commands =
         --project-base-dir={toxworkdir}/docutils \
         --html-output=./build/docutils \
         {toxworkdir}/docutils/docutils/docutils
+
+[testenv:astroid]
+description = Astroid API documentation
+
+deps =
+    docutils
+    pydoctor
+
+commands =
+    sh -c "if [ ! -d {toxworkdir}/astroid/astroid ]; then \
+        git clone --depth 1 https://github.com/PyCQA/astroid.git {toxworkdir}/astroid/astroid; \
+        fi"
+    sh -c "cd {toxworkdir}/astroid/astroid && git fetch --tags && git checkout 2.5"
+
+    rm -rf ./build/docutils
+    
+    pydoctor \
+        --project-name="astroid-2.5" \
+        --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
+        --docformat=restructuredtext \
+        --project-base-dir={toxworkdir}/astroid/ \
+        --html-output=./build/astroid \
+        {toxworkdir}/astroid/astroid
