--- a/.github/workflows/astroid-apidocs.yml
+++ b/.github/workflows/astroid-apidocs.yml
@@ -1,11 +1,11 @@
-name: docutils-apidocs
+name: astroid-apidocs
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  docutils:
+  astroid:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,14 +22,14 @@ jobs:
     - name: Generate API documentations
       run: |
 
-        # Generate docutils apidocs
-        tox -e docutils || true
+        # Generate astroid apidocs
+        tox -e astroid || true
 
     - name: Push API documentation to Github Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build/docutils/
-        commit_message: "Update docutils API documentations"
-        destination_dir: docutils
+        publish_dir: ./build/astroid/
+        commit_message: "Update astroid API documentations"
+        destination_dir: astroid
         enable_jekyll: true
