--- a/tox.ini
+++ b/tox.ini
@@ -32,12 +32,12 @@ commands =
     sh -c "if [ ! -d {toxworkdir}/astroid/astroid ]; then \
         git clone --depth 1 https://github.com/PyCQA/astroid.git {toxworkdir}/astroid/astroid; \
         fi"
-    sh -c "cd {toxworkdir}/astroid/astroid && git fetch --tags && git checkout 2.5"
+    sh -c "cd {toxworkdir}/astroid/astroid && git fetch --tags && git checkout v2.6.0"
 
     rm -rf ./build/docutils
     
     pydoctor \
-        --project-name="astroid-2.5" \
+        --project-name="astroid-v2.6.0" \
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
         --project-base-dir={toxworkdir}/astroid/ \
