Fix tox warning and package path

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,7 @@
+[testenv]
+allowlist_externals =
+    rm
+    sh
 [testenv:docutils]
 description = Docutils API documentation
 
@@ -42,4 +46,4 @@ commands =
         --docformat=restructuredtext \
         --project-base-dir={toxworkdir}/astroid/ \
         --html-output=./build/astroid \
-        {toxworkdir}/astroid/astroid
+        {toxworkdir}/astroid/astroid/astroid
