Better error handling

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
 
     rm -rf ./build/docutils
     
-    pydoctor \
+    - pydoctor \
         --project-name="docutils-0.17.1" \
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
@@ -40,7 +40,7 @@ commands =
 
     rm -rf ./build/docutils
     
-    pydoctor \
+    - pydoctor \
         --project-name="astroid-v2.6.0" \
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
