--- a/.github/workflows/astroid-apidocs.yml
+++ b/.github/workflows/astroid-apidocs.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
 
         # Generate astroid apidocs
-        tox -e astroid || true
+        tox -e astroid
 
     - name: Push API documentation to Github Pages
       uses: peaceiris/actions-gh-pages@v3
