Add --html-viewsource-base option

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ commands =
         --project-name="astroid-v2.6.0" \
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
+        --html-viewsource-base="https://github.com/PyCQA/astroid/tree/v2.6.0/" \
         --project-base-dir={toxworkdir}/astroid/ \
         --html-output=./build/astroid \
         {toxworkdir}/astroid/astroid/astroid
