Fix source link and use latest pydoctor

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ description = Docutils API documentation
 
 deps =
     docutils
-    pydoctor
+    git+git@github.com:twisted/pydoctor.git
 
 commands =
     sh -c "if [ ! -d {toxworkdir}/docutils/docutils ]; then \
@@ -21,7 +21,7 @@ commands =
         --project-name="docutils-0.17.1" \
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
-        --project-base-dir={toxworkdir}/docutils \
+        --project-base-dir={toxworkdir}/docutils/docutils \
         --html-output=./build/docutils \
         {toxworkdir}/docutils/docutils/docutils
 
@@ -30,7 +30,7 @@ description = Astroid API documentation
 
 deps =
     docutils
-    pydoctor
+    git+git@github.com:twisted/pydoctor.git
 
 commands =
     sh -c "if [ ! -d {toxworkdir}/astroid/astroid ]; then \
@@ -44,7 +44,7 @@ commands =
         --project-name="astroid-v2.6.0" \
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
-        --html-viewsource-base="https://github.com/PyCQA/astroid/tree/v2.6.0/" \
-        --project-base-dir={toxworkdir}/astroid/ \
+        --html-viewsource-base="https://github.com/PyCQA/astroid/tree/v2.6.0" \
+        --project-base-dir={toxworkdir}/astroid/astroid/ \
         --html-output=./build/astroid \
         {toxworkdir}/astroid/astroid/astroid
