--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ description = Docutils API documentation
 
 deps =
     docutils
-    git+git@github.com:twisted/pydoctor.git
+    git+https://github.com/twisted/pydoctor.git
 
 commands =
     sh -c "if [ ! -d {toxworkdir}/docutils/docutils ]; then \
@@ -30,7 +30,7 @@ description = Astroid API documentation
 
 deps =
     docutils
-    git+git@github.com:twisted/pydoctor.git
+    git+https://github.com/twisted/pydoctor.git
 
 commands =
     sh -c "if [ ! -d {toxworkdir}/astroid/astroid ]; then \
