Use pydoctor with a search bar!

--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,15 @@
 allowlist_externals =
     rm
     sh
+
+# use pydoctor with a search bar: 63e4660ce0d0c42109eb25d8eaa012228546bab2
+
 [testenv:docutils]
-description = Docutils API documentation
+description = Docutils API documentation 
 
 deps =
     docutils
-    git+https://github.com/twisted/pydoctor.git
+    git+https://github.com/tristanlatr/pydoctor.git@63e4660ce0d0c42109eb25d8eaa012228546bab2
 
 commands =
     sh -c "if [ ! -d {toxworkdir}/docutils/docutils ]; then \
@@ -30,7 +33,7 @@ description = Astroid API documentation
 
 deps =
     docutils
-    git+https://github.com/twisted/pydoctor.git
+    git+https://github.com/tristanlatr/pydoctor.git@63e4660ce0d0c42109eb25d8eaa012228546bab2
 
 commands =
     sh -c "if [ ! -d {toxworkdir}/astroid/astroid ]; then \
