--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,11 @@
 allowlist_externals =
     rm
     sh
+    cat
 
 # use pydoctor with a search bar: 63e4660ce0d0c42109eb25d8eaa012228546bab2
 
-[testenv:docutils]
+[testenv:docutils-apidocs]
 description = Docutils API documentation 
 
 deps =
@@ -13,10 +14,10 @@ deps =
     git+https://github.com/tristanlatr/pydoctor.git@63e4660ce0d0c42109eb25d8eaa012228546bab2
 
 commands =
-    sh -c "if [ ! -d {toxworkdir}/docutils/docutils ]; then \
-        git clone --depth 1 git://repo.or.cz/docutils.git {toxworkdir}/docutils/docutils; \
+    sh -c "if [ ! -d {toxworkdir}/docutils-apidocs/docutils ]; then \
+        git clone --depth 1 git://repo.or.cz/docutils.git {toxworkdir}/docutils-apidocs/docutils; \
         fi"
-    sh -c "cd {toxworkdir}/docutils/docutils && git fetch --tags && git checkout docutils-0.17.1"
+    sh -c "cd {toxworkdir}/docutils-apidocs/docutils && git fetch --tags && git checkout docutils-0.17.1"
 
     rm -rf ./build/docutils
     
@@ -24,11 +25,11 @@ commands =
         --project-name="docutils-0.17.1" \
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
-        --project-base-dir={toxworkdir}/docutils/docutils \
+        --project-base-dir={toxworkdir}/docutils-apidocs/docutils \
         --html-output=./build/docutils \
-        {toxworkdir}/docutils/docutils/docutils
+        {toxworkdir}/docutils-apidocs/docutils/docutils
 
-[testenv:astroid]
+[testenv:astroid-apidocs]
 description = Astroid API documentation
 
 deps =
@@ -36,10 +37,10 @@ deps =
     git+https://github.com/tristanlatr/pydoctor.git@63e4660ce0d0c42109eb25d8eaa012228546bab2
 
 commands =
-    sh -c "if [ ! -d {toxworkdir}/astroid/astroid ]; then \
-        git clone --depth 1 https://github.com/PyCQA/astroid.git {toxworkdir}/astroid/astroid; \
+    sh -c "if [ ! -d {toxworkdir}/astroid-apidocs/astroid ]; then \
+        git clone --depth 1 https://github.com/PyCQA/astroid.git {toxworkdir}/astroid-apidocs/astroid; \
         fi"
-    sh -c "cd {toxworkdir}/astroid/astroid && git fetch --tags && git checkout v2.6.0"
+    sh -c "cd {toxworkdir}/astroid-apidocs/astroid && git fetch --tags && git checkout v2.6.0"
 
     rm -rf ./build/docutils
     
@@ -48,6 +49,23 @@ commands =
         --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
         --docformat=restructuredtext \
         --html-viewsource-base="https://github.com/PyCQA/astroid/tree/v2.6.0" \
-        --project-base-dir={toxworkdir}/astroid/astroid/ \
+        --project-base-dir={toxworkdir}/astroid-apidocs/astroid/ \
         --html-output=./build/astroid \
-        {toxworkdir}/astroid/astroid/astroid
+        {toxworkdir}/astroid-apidocs/astroid/astroid
+
+[testenv:twisted-apidocs]
+description = Twisted API docuentation (with search bar)
+
+deps =
+    docutils
+    git+https://github.com/tristanlatr/pydoctor.git@63e4660ce0d0c42109eb25d8eaa012228546bab2
+
+commands =
+    sh -c "if [ ! -d {toxworkdir}/twisted-apidocs/twisted ]; then \
+        git clone --depth 1 https://github.com/twisted/twisted.git {toxworkdir}/twisted-apidocs/twisted; \
+        fi"
+    sh -c "cd {toxworkdir}/twisted-apidocs/twisted && git fetch --tags && git checkout twisted-21.2.0"
+
+    rm -rf ./build/twisted
+    /bin/sh -c "{toxworkdir}/twisted-apidocs/twisted/bin/admin/build-apidocs {toxworkdir}/twisted-apidocs/twisted/src ./build/twisted > {toxworkdir}/twisted-apidocs/twisted-apidocs.log"
+    /bin/cat {toxworkdir}/twisted-apidocs/twisted-apidocs.log
