--- a/.github/workflows/astroid-apidocs.yml
+++ b/.github/workflows/astroid-apidocs.yml
@@ -19,11 +19,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel tox
 
-    - name: Generate API documentations
+    - name: Generate API documentation
       run: |
 
         # Generate astroid apidocs
-        tox -e astroid
+        tox -e astroid-apidocs
 
     - name: Push API documentation to Github Pages
       uses: peaceiris/actions-gh-pages@v3
