Add NLTK API documentation

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
     
     - pydoctor \
         --project-name="docutils-0.17.1" \
-        --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
+        --project-url="https://docutils.sourceforge.io/" \
         --docformat=restructuredtext \
         --project-base-dir={toxworkdir}/docutils-apidocs/docutils \
         --html-output=./build/docutils \
@@ -46,7 +46,7 @@ commands =
     
     - pydoctor \
         --project-name="astroid-v2.6.0" \
-        --project-url="https://github.com/tristanlatr/apidocs/tree/main" \
+        --project-url="https://github.com/PyCQA/astroid/" \
         --docformat=restructuredtext \
         --html-viewsource-base="https://github.com/PyCQA/astroid/tree/v2.6.0" \
         --project-base-dir={toxworkdir}/astroid-apidocs/astroid/ \
@@ -54,7 +54,7 @@ commands =
         {toxworkdir}/astroid-apidocs/astroid/astroid
 
 [testenv:twisted-apidocs]
-description = Twisted API docuentation (with search bar)
+description = Twisted API docuentation
 
 deps =
     docutils
@@ -69,3 +69,27 @@ commands =
     rm -rf ./build/twisted
     /bin/sh -c "{toxworkdir}/twisted-apidocs/twisted/bin/admin/build-apidocs {toxworkdir}/twisted-apidocs/twisted/src ./build/twisted > {toxworkdir}/twisted-apidocs/twisted-apidocs.log"
     /bin/cat {toxworkdir}/twisted-apidocs/twisted-apidocs.log
+
+[testenv:nltk-apidocs]
+description = NLTK API docuentation
+
+deps =
+    docutils
+    git+https://github.com/tristanlatr/pydoctor.git@63e4660ce0d0c42109eb25d8eaa012228546bab2
+
+commands =
+    sh -c "if [ ! -d {toxworkdir}/nltk-apidocs/nltk ]; then \
+        git clone --depth 1 https://github.com/nltk/nltk.git {toxworkdir}/nltk-apidocs/nltk; \
+        fi"
+    sh -c "cd {toxworkdir}/nltk-apidocs/nltk && git fetch --tags && git checkout 3.6.2"
+
+    rm -rf ./build/nltk
+    
+    - pydoctor \
+        --project-name="nltk-3.6.2" \
+        --project-url="http://www.nltk.org/" \
+        --docformat=restructuredtext \
+        --html-viewsource-base="https://github.com/nltk/nltk/tree/3.6.2" \
+        --project-base-dir={toxworkdir}/nltk-apidocs/nltk/ \
+        --html-output=./build/nltk \
+        {toxworkdir}/nltk-apidocs/nltk/nltk
