--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands =
         --project-name="docutils-0.17.1" \
         --project-url="https://docutils.sourceforge.io/" \
         --docformat=restructuredtext \
+        --html-viewsource-base="https://sourceforge.net/p/docutils/code/HEAD/tree/tags/docutils-0.17.1/" \
         --project-base-dir={toxworkdir}/docutils-apidocs/docutils \
         --html-output=./build/docutils \
         {toxworkdir}/docutils-apidocs/docutils/docutils
