--- a/tox.ini
+++ b/tox.ini
@@ -94,3 +94,27 @@ commands =
         --project-base-dir={toxworkdir}/nltk-apidocs/nltk/ \
         --html-output=./build/nltk \
         {toxworkdir}/nltk-apidocs/nltk/nltk
+
+[testenv:mypy-apidocs]
+description = MyPy API docuentation
+
+deps =
+    docutils
+    git+https://github.com/tristanlatr/pydoctor.git@63e4660ce0d0c42109eb25d8eaa012228546bab2
+
+commands =
+    sh -c "if [ ! -d {toxworkdir}/mypy-apidocs/mypy ]; then \
+        git clone --depth 1 https://github.com/python/mypy.git {toxworkdir}/mypy-apidocs/mypy; \
+        fi"
+    sh -c "cd {toxworkdir}/mypy-apidocs/mypy && git fetch --tags && git checkout v0.930"
+
+    rm -rf ./build/mypy
+    
+    - pydoctor \
+        --project-name="mypy-0.930" \
+        --project-url="http://www.nltk.org/" \
+        --docformat=restructuredtext \
+        --html-viewsource-base="https://github.com/python/mypy/tree/v0.930" \
+        --project-base-dir={toxworkdir}/mypy-apidocs/mypy/ \
+        --html-output=./build/mypy \
+        {toxworkdir}/mypy-apidocs/mypy/mypy
