--- a/tox.ini
+++ b/tox.ini
@@ -112,7 +112,7 @@ commands =
     
     - pydoctor \
         --project-name="mypy-0.930" \
-        --project-url="http://www.nltk.org/" \
+        --project-url="https://github.com/python/mypy" \
         --docformat=restructuredtext \
         --html-viewsource-base="https://github.com/python/mypy/tree/v0.930" \
         --project-base-dir={toxworkdir}/mypy-apidocs/mypy/ \
